--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   
 	<div class = "mail"> 
 	
-	  Вопросы и предложения: xxxx.xxxxxxxx@xxx.xx 
+	  Вопросы и предложения: drzeocorp@gmail.com 
 	    <hr>
-	  Поддержать разработчика: Qiwi +994xxxxxxxxx
+	  Поддержать разработчика: Qiwi +994517469018
 	
 	</div>
 	
